@@ -1,3 +1,7 @@
+2008-09-14  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #9308: htmlArea RTE: link on colour name doesn't set colour
+
 2008-09-13  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9277: Incorrect size of htmlArea RTE dialogue windows in Google Chrome browser
